--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                         <div
                             class="max-w-xl-388 max-w-654  px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt_24   z-1 ">
                             <div class="gradient-border-mask3 box-email">
-                                <h3
-                                    class=" text-white   text-center ff_opensans fw-semibold lh_2xl px-10 px-sm-68 mb-sm-3 mb-2  fs_8md">
+                                <h2
+                                    class=" text-white  text-center ff_opensans fw-semibold lh_2xl px-10 mb-sm-3 mb-2  fs_8md">
                                     This
                                     Is
                                     The
                                     Right Time
-                                    to Invest In AI Stocks</h3>
+                                    to Invest In AI Stocks</h2>
                                 <p class="ff_opensans fw-normal  fs_xs lh_xsm text-center  text-white  mb-0">In a matter
                                     of
                                     minutes, one of our AI mentors will contact you, No Experience Required!
@@ -241,7 +241,7 @@
             <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
         </header>
         <!-- silder by  keyframes  -->
-        <div class="overflow-hidden mt-md-0 pt-4 pb-5">
+        <div class="overflow-hidden pb-5">
             <div class="d-flex py_2 align-items-center gap_md_20 gap-6 slide_container">
 
                 <div class="logo_size">
@@ -1236,7 +1236,8 @@
                                             class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
                                         <p class="mb-0" id="errorFirstName"></p>
                                     </div>
-                                    <div class="w-100 w-sm-50"> <input required id="lastName" type="text" placeholder="Last Name"
+                                    <div class="w-100 w-sm-50"> <input required id="lastName" type="text"
+                                            placeholder="Last Name"
                                             class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
                                         <p class="mb-0" id="errorLastName"></p>
                                     </div>
