--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                         2024 with
                         the Top 7 Fastest-Growing <span class="gradient_text"> AI Stocks!</span>
                     </h1>
-                    <p class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto mb-0  c-gray pt-4 mt-1">
+                    <p
+                        class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto mb-0  c-gray pt-2 pt-sm-4 mt-1">
                         Major
                         AI
                         Stocks such
@@ -80,7 +81,7 @@
                             130.66% in 2024</span>
                     </p>
                     <div
-                        class=" d-flex align-items-center   align-items-lg-start    justify-content-between flex-column  flex-lg-row   align-items-start   mt-39">
+                        class=" d-flex align-items-center   align-items-lg-start justify-content-between flex-column flex-lg-row align-items-start mt-sm-39 mt-28">
                         <div class="max-w-xl-654 max-w-lg-626 max-w-654 w-100 px-lg-1 px-xl-0">
                             <div class="vedio">
                                 <video id="vid" controls src="./assets/images/video/herader-video.mp4" muted
@@ -684,7 +685,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
+                        class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-sm-4 pt-lg-0 justify-content-center align-items-center">
                         <div
                             class="understanding_card  gap-3 d-flex flex-column  flex-lg-row align-items-center justify-content-center align-items-lg-start">
                             <img class="man_img" src="./assets/images/png/mike-invested-img.png" alt="man-img" />
@@ -739,7 +740,7 @@
             <div class="container mw_1164">
                 <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
                         class="gradient_text">Statistics</span> For Today</h2>
-                <div class="row pt-md-4 pt-3 justify-content-center">
+                <div class="row pt-lg-3 justify-content-center">
                     <div class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-4 mt-md-5">
                         <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
                             <div>
@@ -928,7 +929,7 @@
             </span>
             <span class="FaqBottomEllips d-block">
             </span>
-            <div class="container py-4 py-md-5">
+            <div class="container pt-2 pb-3 py-sm-4 py-md-5">
                 <div class="max_w_Faq mx-auto">
                     <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
                         <span class="blueGraident textBg">Questions</span>
@@ -1040,7 +1041,7 @@
                     Stocks For
                     <span class="font-gradient">High Returns</span>
                 </h1>
-                <div class="row align-items-center pb-md-5  justify-content-center">
+                <div class="row align-items-center pb-lg-5 justify-content-center">
                     <div class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-center position-relative">
                         <div class="position-relative">
                             <img class="mobile_wh position-relative z-3" src="./assets/images/webp/benifit-mobile.webp"
@@ -1220,11 +1221,11 @@
                     <span class="blueGraident textBg">first step</span> into <span class="blueGraident textBg ">AI
                         Stock</span> Trading
                 </h2>
-                <p class="ff_opensans fw-normal fs_xs lh_md cd-gray text-center pt-2 pt-sm-3 pt-md-4">In a matter of
+                <p class="ff_opensans fw-normal fs_xs lh_md cd-gray text-center pt-2 pt-lg-4">In a matter of
                     minutes,
                     one of our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
-                <div class="row align-items-center pt-2 pt-md-5 mt-3 min_h flex-column-reverse flex-lg-row">
-                    <div class="col-12 col-lg-6 pt-4 pt-sm-5 pt-lg-0">
+                <div class="row align-items-center pt-2 pt-md-4 pt-lg-5 mt-lg-3 min_h flex-column-reverse flex-lg-row">
+                    <div class="col-12 col-lg-6 pt-4 pt-lg-5 pt-lg-0">
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center mb-0">Start Trading with AI
                                 Stocks !
@@ -1299,7 +1300,7 @@
                     class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
                         <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-3 text-center text-sm-start ">
+                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-1 pt-lg-3 text-center text-sm-start ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
@@ -1353,7 +1354,7 @@
                     <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 text-center text-sm-start">
                         Disclaimer
                     </p>
-                    <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-3 text-center text-sm-start">
+                    <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-1 pt-sm-3 text-center text-sm-start">
                         This website is not a news agency, information website, or blog. It is a webpage aimed at
                         promotional
                         publications that use the technique of storytelling to illustrate the scope of the services and
@@ -1421,4 +1422,5 @@
             </script>
         <script src="./assets/js/app.js"></script>
 </body>
+
 </html>
