--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     of
                                     minutes, one of our AI mentors will contact you, No Experience Required!
                                 </p>
-                                <form id="headerfrom">
+                                <form id="headerfrom" class="invalid">
                                     <input required id="name" type="text" placeholder="First Name"
                                         class="email-input-style-header mt-4 ff_opensans fw-normal  fs_xs lh_xsm c-black-100 ">
                                     <p class=" mb-0 text-white " id="errorname"></p>
@@ -1230,7 +1230,7 @@
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center mb-0">Start Trading with AI
                                 Stocks !
                             </h3>
-                            <form id="tradingfrom" class="pt-4 mt-sm-2">
+                            <form id="tradingfrom" class="pt-4 mt-sm-2 invalid">
                                 <div class="d-sm-flex align-items-center gap-2">
                                     <div class="w-100 w-sm-50"> <input required id="firstName" type="text"
                                             placeholder="First Name"
