--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="overflow-x-hidden">
         <!-- header -->
-        <header class=" bg-hero-img position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
+        <header class=" bg-hero-img mw_1920 position-relative mb-xl-100 mb-md-64 mb-45 overflow-x-clip  z-1">
             <nav class=" py-12 nav-background position-relative  z-1">
                 <div class="container">
                     <div class=" d-flex  justify-content-between align-items-center ">
@@ -242,7 +242,7 @@
             <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
         </header>
         <!-- silder by  keyframes  -->
-        <div class="overflow-hidden pb-5">
+        <div class="overflow-hidden pb-5 mw_1920">
             <div class="d-flex py_2 align-items-center gap_md_20 gap-6 slide_container">
 
                 <div class="logo_size">
@@ -631,7 +631,7 @@
             </div>
         </div>
         <!--------------------------------------------------- uderstanding-section --------------------------------------------------->
-        <div class=" pt-md-5 mt_10">
+        <section class=" pt-md-5 mt_10 mw_1920">
             <div class="container mw_1200 pt-lg-5 mt-1">
                 <h2
                     class="mw_94  pt-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
@@ -733,9 +733,9 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
         <!--============Statistics-For-Today================ -->
-        <section class="pt_Statistics position-relative z-1">
+        <section class="pt_Statistics position-relative z-1 mw_1920">
             <div class="Statistics_ellips2 d-none d-md-block"></div>
             <div class="container mw_1164">
                 <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
@@ -752,7 +752,7 @@
                             Places
                             left
                             to
-                            <span class="d-sm-block">register</span>
+                            <span class="d-block">register</span>
                         </p>
                     </div>
                     <div
@@ -766,7 +766,7 @@
                         <p class="ff_opensans fw-semibold text-white lh_5xl text-center fs_6lg mt-2 mt-md-4 pt-1">
                             Average
                             Registrations
-                            <span class="d-sm-block">
+                            <span class="d-block">
                                 per day</span>
                         </p>
                     </div>
@@ -778,21 +778,20 @@
                                         data-target="5"></span>x</p>
                             </div>
                         </div>
-                        <p
-                            class="ff_opensans fw-semibold text-white pe-3 pe-lg-4 lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
+                        <p class="ff_opensans fw-semibold text-white lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
                             The
                             Average
-                            Earnings
-                            Increase</p>
+                            <span class="d-block">Earnings Increase</span>
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
         <!--============Average-Earnings============== -->
-        <section class="py_average position-relative z-1">
+        <section class="py_average position-relative z-1 mw_1920">
             <div class="Statistics_ellips1 d-none d-xl-block"></div>
             <div class="Statistics_ellips3  d-none d-xl-block"></div>
-            <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-3 pe-lg-4 pe-xl-5">
+            <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
                 <div class="mw_814 overflow-hidden w-100">
                     <div class="d-flex slide_container mb-2">
                         <div class="px_6">
@@ -922,19 +921,19 @@
             </div>
         </section>
         <!-- faq -->
-        <section class="position-relative z-1">
+        <section class="position-relative z-1 mw_1920">
             <span class="FaqLeftEllips d-block">
             </span>
             <span class="FaqRightEllips d-block">
             </span>
             <span class="FaqBottomEllips d-block">
             </span>
-            <div class="container pt-2 pb-3 py-sm-4 py-md-5">
+            <div class="container pb-3 py-sm-3 py-md-4 py-lg-5">
                 <div class="max_w_Faq mx-auto">
                     <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
                         <span class="blueGraident textBg">Questions</span>
                     </h2>
-                    <div class="pt-sm-4 mt-3">
+                    <div class="pt-sm-4 pt-3 mt-lg-3">
                         <div class="accordion faqSection" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -1028,7 +1027,7 @@
             </div>
         </section>
         <!--------------------------------------------------- benifit-section --------------------------------------------------->
-        <div class="position-relative pt-3">
+        <section class="position-relative pt-3 mw_1920">
             <span class="ellipse_1 position-absolute"></span>
             <span class="ellipse_2 position-absolute"></span>
             <span class="ellipse_3 position-absolute"></span>
@@ -1210,9 +1209,9 @@
                     return of more than 130.66% in 2024.
                 </p>
             </div>
-        </div>
+        </section>
         <!-- Trading-section -->
-        <div class="py-5 position-relative z-1">
+        <div class="py-5 position-relative z-1 mw_1920">
             <span class="d-block Ai_stackLeftEllips"></span>
             <span class="d-block Ai_stackRightEllips"></span>
             <div class="py-lg-5 my-1 container">
@@ -1292,7 +1291,7 @@
             </div>
         </div>
         <!-- footer -->
-        <footer class="mt-md-5 pt-lg-5 position-relative z-1">
+        <footer class="mt-md-5 pt-lg-5 position-relative z-1 mw_1920">
             <span class="footerLeft d-block"></span>
             <span class="footerRight d-block"></span>
             <div class="container pt-lg-5">
@@ -1300,7 +1299,8 @@
                     class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
                         <p class="ff_opensans fs_xl fw-bold white lh_6xxl mb-0 text-center text-sm-start">AI STOCKS</p>
-                        <p class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-1 pt-lg-3 text-center text-sm-start ">
+                        <p
+                            class="ff_opensans fs_xs fw-normal cc-gray lh_xxl mb-0 pt-1 pt-lg-3 text-center text-sm-start ">
                             Empowering Your Financial Future
                             <span class="d-sm-block">with Intelligent Investments</span>
                         </p>
@@ -1354,7 +1354,8 @@
                     <p class="ff_opensans fw-bold fs_md lh_2lg white mb-0 text-center text-sm-start">
                         Disclaimer
                     </p>
-                    <p class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-1 pt-sm-3 text-center text-sm-start">
+                    <p
+                        class="ff_opensans fw-normal fs_xs lh_xxl cc-gray mb-0 lh_xxl pt-1 pt-sm-3 text-center text-sm-start">
                         This website is not a news agency, information website, or blog. It is a webpage aimed at
                         promotional
                         publications that use the technique of storytelling to illustrate the scope of the services and
