--- a/index3.html
+++ b/index3.html
@@ -213,9 +213,8 @@
         <span class=" ellipes5headerright-bottom d-none d-lg-block"></span>
     </header>
     <!-- silder by  keyframes  -->
-    <div class="overflow-hidden pb-5">
+    <section class="overflow-hidden pb-5">
         <div class="d-flex py_2 align-items-center gap_md_20 gap-6 slide_container">
-
             <div class="logo_size">
                 <div class="man-profile-card  d-flex  align-items-center  gap-3">
                     <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
@@ -600,7 +599,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
