--- a/index7.html
+++ b/index7.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style7.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <link rel="stylesheet" href="./assets/css/style7.css">
     <link rel="shortcut icon" href="./assets/images/webp/favicon.webp" type="image/x-icon">
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -415,7 +416,7 @@
                                 <p class="mb-15 off-black3 mb-3  text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
                                 </p>
-                                <p class="fs_sm mw_224 fw-normal lh_2md mb-0 text-center ff_opensans gray2">
+                                <p class="fs_sm mw_224 fw-normal lh_2md mb-0 text-center mx-auto ff_opensans gray2">
                                     Don't miss out on the Al revolution! Investors have witnessed
                                     remarkable returns up to 166.32% in Al Stocks in recent years.
                                 </p>
@@ -444,7 +445,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white mb-0 ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white fs_16 mb-0 ff_opensans fs_md lh_lg fw-bold text-center">
                                             Artificial <br />
                                             Intelligence Stocks
                                         </p>
@@ -469,7 +470,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white  ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white fs_16  ff_opensans fs_md lh_lg fw-bold text-center">
                                             AI Revolution!
                                         </p>
                                     </div>
@@ -492,7 +493,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white mb-0 ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white fs_16 mb-0 ff_opensans fs_md lh_lg fw-bold text-center">
                                             Technological <br />
                                             Breakthroughs
                                         </p>
@@ -553,7 +554,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white ff_opensans mb-0 fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white fs_16 ff_opensans mb-0 fs_md lh_lg fw-bold text-center">
                                             Artificial <br />
                                             Intelligence
                                         </p>
@@ -612,7 +613,7 @@
 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
 </div>
 <img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
-<div class="d-flex align-items-center italic trade_btn "> <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$40</p> <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Potential Earnings</p></div>
+<div class="d-flex align-items-center italic trade_btn gap-1"> <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$40</p> <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Potential Earnings</p></div>
 </div>
                     </div>
                     <div class="col-lg-6 col-sm-12 ps-lg-4 d-flex flex-column pt-4 pt-lg-0 justify-content-center align-items-center">
