--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
                                 <p class="mb-15 off-black3 mb-3  text-center fw-bold lh_2lg fs_2md mt-4">
                                     Al revolution!
                                 </p>
-                                <p class="fs_sm mw_224 fw-normal lh_2md mb-0 text-center ff_opensans gray2">
+                                <p class="fs_sm mw_224 mx-auto fw-normal lh_2md mb-0 text-center ff_opensans gray2">
                                     Don't miss out on the Al revolution! Investors have witnessed
                                     remarkable returns up to 166.32% in Al Stocks in recent years.
                                 </p>
@@ -1099,7 +1099,7 @@
                                                 </defs>
                                             </svg>
                                         </span>
-                                        <p class="text-white  ff_opensans fs_md lh_lg fw-bold text-center">
+                                        <p class="text-white ff_opensans fs_md lh_lg fw-bold text-center">
                                             AI Revolution!
                                         </p>
                                     </div>
