--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="max-w-xl-388 max-w-654  px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt_24   z-1 ">
+                    <div class="max-w-xl-388 max-w-654 w-100 px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt_24   z-1 ">
                         <div class="gradient-border-mask3 box-email">
                             <h2 class=" text-white  text-center ff_opensans fw-semibold lh_2xl px-10 mb-sm-3 mb-2  fs_8md">
                                 This
