--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
         <section class=" pt-md-5 mt_10 mw_1920">
             <div class="container mw_1200 pt-lg-5 mt-1">
                 <h2
-                    class="mw_94  pt-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
+                    class="mw_94 pt-sm-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
                     <br class="d-none d-md-block" />
                     and <span class="font-gradient">Buying Power</span>
@@ -920,7 +920,7 @@
             </span>
             <span class="FaqBottomEllips d-block">
             </span>
-            <div class="container pb-3 py-sm-3 py-md-4 py-lg-5">
+            <div class="container py-sm-3 py-md-4 py-lg-5">
                 <div class="max_w_Faq mx-auto">
                     <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently Asked
                         <span class="blueGraident textBg">Questions</span>
@@ -1019,11 +1019,11 @@
             </div>
         </section>
         <!--------------------------------------------------- benifit-section --------------------------------------------------->
-        <section class="position-relative pt-3 mw_1920">
+        <section class="position-relative pt-sm-3 mw_1920">
             <span class="ellipse_1 position-absolute"></span>
             <span class="ellipse_2 position-absolute"></span>
             <span class="ellipse_3 position-absolute"></span>
-            <div class="container position-relative mw_990 py-lg-5 py-4 mt-1">
+            <div class="container position-relative mw_990 py-lg-5 pt-5 py-md-4 mt-lg--1">
 
                 <h1
                     class="mw_733 mb-lg-80 pb-4 pb-lg-0 ff_opensans fw-bold pt-lg-5 lh_7xl fs_8xl text-white text-center mx-auto">
