--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
             </div>
         </section>
         <!-- Trading-section -->
-        <div class="py-5 position-relative z-1 mw_1920">
+        <div class="py-5 position-relative z-1">
             <span class="d-block Ai_stackLeftEllips"></span>
             <span class="d-block Ai_stackRightEllips"></span>
             <div class="py-lg-5 my-1 container">
@@ -1220,11 +1220,11 @@
                     <span class="blueGraident textBg">first step</span> into <span class="blueGraident textBg ">AI
                         Stock</span> Trading
                 </h2>
-                <p class="ff_opensans fw-normal fs_xs lh_md cd-gray text-center pt-2 pt-lg-4">In a matter of
-                    minutes,
-                    one of our AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
+                <p class="ff_opensans fw-normal fs_xs lh_md cd-gray text-center pt-2 pt-lg-4">In a matter of minutes,
+                    one of our
+                    AI mentors will contact you, No <br class="d-none d-lg-block"> Experience Required!</p>
                 <div class="row align-items-center pt-2 pt-md-4 pt-lg-5 mt-lg-3 min_h flex-column-reverse flex-lg-row">
-                    <div class="col-12 col-lg-6 pt-4 pt-lg-5 pt-lg-0">
+                    <div class="col-12 col-lg-6 pt-4 pt-sm-5 pt-lg-0">
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center mb-0">Start Trading with AI
                                 Stocks !
@@ -1234,17 +1234,17 @@
                                     <div class="w-100 w-sm-50"> <input required id="firstName" type="text"
                                             placeholder="First Name"
                                             class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
-                                        <p class="mb-0" id="errorFirstName"></p>
+
                                     </div>
                                     <div class="w-100 w-sm-50"> <input required id="lastName" type="text"
                                             placeholder="Last Name"
                                             class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
-                                        <p class="mb-0" id="errorLastName"></p>
+
                                     </div>
                                 </div>
                                 <input required id="Email" type="email" placeholder="Email"
                                     class="mt-2 ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100">
-                                <p class="mb-0" id="errorEmail"></p>
+
                                 <div class="d-flex align-items-center rounded-1 overflow-hidden mt-2 borderInput">
                                     <div class="d-flex align-items-center white gap-1 p-3 backdrop">+91
                                         <svg width="8" height="6" viewBox="0 0 8 6" fill="none"
@@ -1257,9 +1257,10 @@
                                         placeholder="Phone Number"
                                         class=" bg-gray ff_opensans numberinput-header fw-normal fs-xs lh_xsm place AiStockInputPhone w-100">
                                 </div>
-                                <p class="mb-0" id="errorNumber"></p>
-                                <button aria-label="signups" id="Submit" type="submit"
-                                    class="mt-4 text-decoration-none w-100 ff_opensans submittradingfrom text-black main-button fw-bold fs_xs lh_xsm">Sign
+
+                                <button disabled style="cursor: not-allowed;" aria-label="signups" id="Submit"
+                                    type="submit"
+                                    class="mt-4 submitFooter_from text-decoration-none w-100 ff_opensans text-black main-button fw-bold fs_xs lh_xsm">Sign
                                     Up</button>
                             </form>
                         </div>
