--- a/index.html
+++ b/index.html
@@ -1295,10 +1295,10 @@
             </div>
         </div>
         <!-- footer -->
-        <footer class="mt-md-5 pt-lg-5 position-relative z-1 mw_1920">
+        <footer class="mt-md-5 pt-xl-5 position-relative z-1 mw_1920">
             <span class="footerLeft d-block"></span>
             <span class="footerRight d-block"></span>
-            <div class="container pt-lg-5">
+            <div class="container pt-xl-5">
                 <div
                     class="d-flex justify-content-center justify-content-sm-between flex-column flex-sm-row flex-wrap align-items-center mb-0">
                     <div class="maxWidth">
