--- a/index.html
+++ b/index.html
@@ -794,113 +794,113 @@
             <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
                 <div class="mw_814 overflow-hidden w-100">
                     <div class="d-flex slide_container mb-2">
-                        <div class="px_6">
+                        <div class="px-6
                             <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/google-logo.svg" alt="google-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/google-logo.svg" alt="google-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/spotify-logo.svg" alt="spotify-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tesla-logo.svg" alt="tesla-logo" />
                         </div>
                     </div>
                     <div class="d-flex slide_container2 mt-1 mb-2">
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/ford-logo.svg" alt="ford-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/samsung-logo.svg" alt="samsung-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/tata-logo.svg" alt="tata-logo" />
                         </div>
                     </div>
                     <div class="d-flex slide_container mt-1">
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/company-logo.svg" alt="company-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/reliance-logo.svg" alt="reliance-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/stripe-logo.svg" alt="stripe-logo" />
                         </div>
-                        <div class="px_6">
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/adani-logo.svg" alt="adani-logo" />
                         </div>
                     </div>
