--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </header>
         <!-- silder by  keyframes  -->
         <section class="overflow-hidden pb-5 mw_1920">
-            <div class="d-flex  py_2 align-items-center gap_md_20 gap-16 slide_container">
+            <div class="d-flex  py_2 align-items-center gap-3 slide_container">
                 <div class="logo_size">
                     <div class="man-profile-card d-flex align-items-center gap-3">
                         <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
@@ -794,7 +794,7 @@
             <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
                 <div class="mw_814 overflow-hidden w-100">
                     <div class="d-flex slide_container mb-2">
-                        <div class="px-6
+                        <div class="px-6">
                             <img class="social_img" src="/assets/images/svg/knx-logo.svg" alt="knx" />
                         </div>
                         <div class="px-6">
