--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </header>
         <!-- silder by  keyframes  -->
         <section class="overflow-hidden pb-5 mw_1920">
-            <div class="d-flex  py_2 align-items-center gap-3 slide_container">
+            <div class="d-flex  py_2 align-items-center gap_md_20 gap-16 slide_container">
                 <div class="logo_size">
                     <div class="man-profile-card d-flex align-items-center gap-3">
                         <span><img src="./assets/images/svg/girl.svg" alt="girl"></span>
