--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
                         </div>
                     </div>
                 </div>
-                <div class='mw_518 mw_lg_397 w-100 px-3 px-md-0 mw_300 pt-lg-0 mt-lg-0 mb-md-3 mb-lg-0'>
+                <div class='mw_518 mw_lg_397 w-100 px-3 px-md-0 mw_md_300 pt-lg-0 mt-lg-0 mb-md-3 mb-lg-0'>
                     <h2 class="ff_opensans fw-bold text-md-start text-center text-white fs_8xl lh_7xl mb-4 mb-lg-5">
                         Average Earnings of a
                         Registered
