--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
             </div>
         </section>
         <!-- Trading-section -->
-        <div class="py-5 position-relative z-1">
+        <div class="py-5 position-relative z-1 mw_1920">
             <span class="d-block Ai_stackLeftEllips"></span>
             <span class="d-block Ai_stackRightEllips"></span>
             <div class="py-lg-5 my-1 container">
