--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
         <section class=" pt-md-5 mt_10 mw_1920">
             <div class="container mw_1200 pt-lg-5 mt-1">
                 <h2
-                    class="mw_94 pt-sm-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-3 fs_8xl text-white text-center mx-auto">
+                    class="mw_94 pt-sm-4 ff_opensans px-md-0 px-sm-3  fw-bold lh_7xl mb-1 mb-lg-3 fs_8xl text-white text-center mx-auto">
                     Understanding <span class="font-gradient">Leveraged</span> Accounts
                     <br class="d-none d-md-block" />
                     and <span class="font-gradient">Buying Power</span>
