--- a/index.html
+++ b/index.html
@@ -1057,8 +1057,8 @@
                                 </p>
                             </div>
                         </div>
-                        <img class="mobile_back_ellp position-absolute z-1"
-                            src="./assets/images/webp/benifit-ellip.webp" alt="ellipse" />
+                    <div class="benefits_bubble linear_bg benefits_bubble_bg"></div>
+
                     </div>
                     <div class="col-lg-6 col-sm-12 pt-5">
                         <div class="row pb-lg-5 mb-1">
