--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         the Top 7 Fastest-Growing <span class="gradient_text"> AI Stocks!</span>
                     </h1>
                     <p
-                        class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto mb-0  c-gray pt-2 pt-sm-4 mt-1">
+                        class=" fw-normal fs_xs lh_md ff_opensans text-center max-w-665 mx-auto mb-0 c-gray pt-2 pt-sm-3 pt-lg-4 mt-lg-1">
                         Major
                         AI
                         Stocks such
