--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <meta property="twitter:image" content="https://i.ibb.co/LzLxZsH/127-0-0-1-5500-index3-html.png" />
 </head>
 
-<body class="overflow_hidden">
+<body class="overflow_hi dden">
     <!-- preloader -->
-    <div id="preloder"
+    <!-- <div id="preloder"
         class="min-vh-100 bg-black d-flex justify-content-center align-items-center  position-fixed top-0 start-0 w-100 z_15">
         <div class="preloder text-white fs_2xl flex-column d-flex">
             <P class="fs_xl ff_opensans fw-bold text-white">Ai-<span class="text_white">Stocks</span></P>
             <div class="ciclre mx-auto"></div>
         </div>
-    </div>
+    </div> -->
     <div class="overflow-x-hidden">
         <!-- header -->
         <header class=" bg-hero-img mw_1920 position-relative mb-xl-100 mb-md-64 mb-48 overflow-x-clip  z-1">
@@ -663,7 +663,7 @@
                         <div class="accounts_card mx-3 mx-sm-0  mx-md-2 mx-xl-0">
                             <p
                                 class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">
-                                Non - Leveraged Accounts</p>
+                                Without - Leveraged </p>
                             <div class="d-flex justify-content-between align-items-center mb-10">
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">John invested</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
@@ -676,7 +676,7 @@
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Buying Power</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
                             </div>
-                            <img class="w-100 mb-4" src="./assets/images/webp/trade-1.webp" alt="trade-img">
+                            <img class="w-100 mb-4" src="./assets/images/png/trade-img1.webp" alt="trade-img">
                             <div class="d-flex align-items-center italic trade_btn gap-1">
                                 <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$40</p>
                                 <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Potential
@@ -702,7 +702,7 @@
                         <div class="accounts_card mx-3 mx-sm-0 mx-md-2 mx-xl-0">
                             <p
                                 class="ff_opensans fw-bold font-gradient fs_4md lh_xxl mb-md-3 mb-1 text-center text-md-start">
-                                Leveraged Accounts</p>
+                                With Leveraged</p>
                             <div class="d-flex justify-content-between align-items-center mb-10 gap-1">
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Mike invested</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$250</p>
@@ -715,7 +715,7 @@
                                 <p class="fw-normal ff_opensans fs_xs gray-4e mb-0 lh_md">Buying Power</p>
                                 <p class="fw-bold ff_opensans fs_xs black-45 mb-0 lh_md">$7500</p>
                             </div>
-                            <img class="w-100 mb-4" src="./assets/images/webp/trade-2.webp" alt="trade-img">
+                            <img class="w-100 mb-4" src="./assets/images/png/trade-img-2.webp" alt="trade-img">
                             <div class="d-flex align-items-center italic trade_btn gap-1 ">
                                 <p class="green-2d  bg-white ff_opensans fw-bold fs_lg lh_4xl mb-0">$1200</p>
                                 <p class="green-2d  bg-white ff_opensans  mb-0 fw-semibold lh_xsm fs_sm">Mike achieved
@@ -1013,11 +1013,8 @@
                                 <div id="collapseFour" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body ff_opensans fw-normal fs_xs lh_md">
-                                        The standard cost for our AI Trading Platform is $500, but with a limited-time
-                                        50%
-                                        discount, you can begin your trading journey for as low as $250. Moreover, you
-                                        have the
-                                        flexibility to start with any amount between $250 and $10,000
+                                    Getting started with our trading platform is simple. Begin by registering with us, and once your account is set up,
+                                    you'll have access to the powerful features of our AI-driven platform.
                                     </div>
                                 </div>
                             </div>
@@ -1057,7 +1054,7 @@
                                 </p>
                             </div>
                         </div>
-                    <div class="benefits_bubble linear_bg benefits_bubble_bg"></div>
+                        <div class="benefits_bubble linear_bg benefits_bubble_bg"></div>
 
                     </div>
                     <div class="col-lg-6 col-sm-12 pt-5">
@@ -1236,12 +1233,12 @@
                             </h3>
                             <form id="tradingfrom" class="pt-4 mt-sm-2 invalid">
                                 <div class="d-sm-flex align-items-center gap-2">
-                                    <div class="w-100 w-sm-50"> <input autocomplete="off" required id="firstName" type="text"
-                                            placeholder="First Name"
+                                    <div class="w-100 w-sm-50"> <input autocomplete="off" required id="firstName"
+                                            type="text" placeholder="First Name"
                                             class="ff_opensans fw-normal fs-xs lh_xsm white AiStockInput place w-100 w-sm-50 ">
                                     </div>
-                                    <div class="w-100 w-sm-50"> <input autocomplete="off" required id="lastName" type="text"
-                                            placeholder="Last Name"
+                                    <div class="w-100 w-sm-50"> <input autocomplete="off" required id="lastName"
+                                            type="text" placeholder="Last Name"
                                             class="ff_opensans fw-normal fs-xs lh_xsm AiStockInput place w-100 w-sm-50  mt-2 mt-sm-0">
                                     </div>
                                 </div>
@@ -1269,26 +1266,9 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 ">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <div class="position-relative brandGroupwidth z-1">
-                                <img class="w-100" src="./assets/images/webp/groupbrandlogo.webp" alt="web">
-                                <div class="imgAi imgPostion1"><img class="w-100 " src="./assets/images/webp/aws.webp"
-                                        alt="img">
-                                </div>
-                                <div class="imgAi imgPostion5"><img class="w-100 "
-                                        src="./assets/images/webp/mainImg.webp" alt="img"></div>
-                                <div class="imgAi imgPostion7"><img class="w-100 "
-                                        src="./assets/images/webp/arusta.webp" alt="img">
-                                </div>
-                                <div class="imgAi imgPostion2"><img class="w-100"
-                                        src="./assets/images/webp/palantir.webp" alt="img"></div>
-                                <div class="imgAi imgPostion"><img class="w-100" src="./assets/images/webp/iconImg.webp"
-                                        alt="img"></div>
-                                <div class="imgAi imgPostion3"><img class="w-100" src="./assets/images/webp/nvidia.webp"
-                                        alt="img"></div>
-                                <div class="imgAi imgPostion4"><img class="w-100" src="./assets/images/webp/path.webp"
-                                        alt="img"></div>
-                            </div>
+                        <div class="d-flex justify-content-center justify-content-lg-end align-items-center">
+                            <div class="brandGroupwidth"><img class="w-100" src="./assets/images/webp/bradingLogo.webp"
+                                    alt="logo brand"></div>
                         </div>
                     </div>
                 </div>
@@ -1407,7 +1387,6 @@
     <script>
         // Get the section element
         const section = document.getElementById('statistics-today');
-
         // Create an observer instance
         const observer = new IntersectionObserver((entries) => {
             // If the section is visible, call the function
@@ -1433,11 +1412,9 @@
                         setTimeout(updateCounter, 1);
                     } else counter.innerText = target;
                 };
-
                 updateCounter();
             });
         }
-
     </script>
     <!--======================botstrap-link=========================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
