--- a/index3.html
+++ b/index3.html
@@ -6,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/style3.css">
+    <link rel="shortcut icon" href="./assets/images/png/favicon-2.png" type="image/x-icon">
     <!--================bootstrap-link=================== -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Ai-stocks</title>
 </head>
 
-<body>
+<body class="bg-black">
     <!--============Statistics-For-Today================ -->
     <section id="statistics-today" class="pt_Statistics position-relative z-1 mw_1920">
-        <div class="Statistics_ellips2 d-none d-md-block"></div>
+        <div class="Statisticsellips2 d-none d-md-block"></div>
         <div class="container mw_1164">
             <h2 class="text-white ff_opensans fw-bold fs_8xl lh_7xl text-center mb-sm-4 mb-lg-5"><span
-                    class="gradient_text">Statistics</span> For Today</h2>
+                    class="gradient_text2">Statistics</span> For Today</h2>
             <div class="row pt-lg-3 justify-content-center">
                 <div class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-4 mt-md-5">
-                    <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
+                    <div class="border_Statistics2 d-flex justify-content-center align-items-center pb-lg-2">
                         <div>
-                            <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">0<span class="counter"
-                                    data-target="1">1 </span></p>
+                                    <p id="placesLeftCounter" class="counter fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">
+                                        01
+                                    </p>
                         </div>
                     </div>
                     <p class="ff_opensans fw-semibold text-white lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
@@ -36,10 +38,15 @@
                 </div>
                 <div
                     class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
-                    <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
+                    <div class="border_Statistics2 d-flex justify-content-center align-items-center pb-lg-2">
                         <div>
-                            <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
-                                    data-target="135">1 </span></p>
+                            <!-- <p id="registrationsPerDayCounter"
+                                class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class=""
+                                    data-target="135">1 </span></p> -->
+                            <p id="registrationsPerDayCounter"
+                                class="fw-bold counter ff_roboto fs_3xxl text-white lh_12xl mb-0">
+                                135
+                            </p>
                         </div>
                     </div>
                     <p class="ff_opensans fw-semibold text-white lh_5xl text-center fs_6lg mt-2 mt-md-4 pt-1">
@@ -51,10 +58,11 @@
                 </div>
                 <div
                     class="col-md-4 col-sm-6 col-12 d-flex flex-column align-items-center mt-1 mt-md-5 mt-md-0 pt-4 pt-md-0">
-                    <div class="border_Statistics d-flex justify-content-center align-items-center pb-lg-2">
+                    <div class="border_Statistics2 d-flex justify-content-center align-items-center pb-lg-2">
                         <div>
-                            <p class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0"><span class="counter"
-                                    data-target="5"></span>x</p>
+                            <p id="earningsIncreaseCounter" class="fw-bold ff_roboto fs_3xxl text-white lh_12xl mb-0">
+                                <span class="counter" data-target="5"></span>x
+                            </p>
                         </div>
                     </div>
                     <p class="ff_opensans fw-semibold text-white lh_6xl text-center fs_6lg mt-2 mt-md-4 pt-1">
@@ -68,8 +76,8 @@
     </section>
     <!--============Average-Earnings============== -->
     <section class="py_average position-relative z-1 mw_1920">
-        <div class="Statistics_ellips1 d-none d-xl-block"></div>
-        <div class="Statistics_ellips3  d-none d-xl-block"></div>
+        <div class="Statisticsellips1 d-none d-xl-block"></div>
+        <div class="Statisticsellips3  d-none d-xl-block"></div>
         <div class=" d-flex flex-md-row flex-column align-items-center average_gap  pe-md-3 pe-lg-4 pe-xl-5">
             <div class="mw_814 overflow-hidden w-100">
                 <div class="d-flex slide_container mb-2">
@@ -189,11 +197,11 @@
                     Average Earnings of a
                     Registered
                     User From a
-                    <span class="gradient_text">Deposit of $250 to 521$</span>
+                    <span class="gradient_text2">Deposit of $250 to 521$</span>
                 </h2>
                 <div class="mt-xl-3 d-flex justify-content-md-start justify-content-center">
                     <button aria-label="registernow"
-                        class="ff_opensans fw-bold text-black fs_xs lh_xsm main-button">Register Now</button>
+                        class="ff_opensans fw-bold text-white fs_xs lh_xsm common_btn">Register Now</button>
                 </div>
             </div>
 
@@ -201,36 +209,43 @@
     </section>
     <!-- counter -->
     <script>
-        // Get the section element
-        const section = document.getElementById('statistics-today');
-        // Create an observer instance
+        const options = {
+            threshold: 0.2, // Trigger when 20% of the element is visible
+        };
         const observer = new IntersectionObserver((entries) => {
-            // If the section is visible, call the function
-            if (entries[0].isIntersecting) {
-                myFunction();
-            }
-        }, { threshold: 1.0 });
-
-        // Observe the section
-        observer.observe(section);
-
-        // The function to be called
-        function myFunction() {
-            const counters = document.querySelectorAll(".counter");
-            counters.forEach((counter) => {
-                counter.innerText = "0";
-                const updateCounter = () => {
-                    const target = +counter.getAttribute("data-target");
-                    const count = +counter.innerText;
-                    const increment = target / 200;
-                    if (count < target) {
-                        counter.innerText = Math.ceil(count + increment);
-                        setTimeout(updateCounter, 1);
-                    } else counter.innerText = target;
-                };
-                updateCounter();
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    // Start counter animation
+                    const target = entry.target.querySelector(".counter");
+                    const countTo = parseInt(target.innerText);
+                    if (target.id === "placesLeftCounter") {
+                        // For placesLeftCounter, count down
+                        let currentCount = 10;
+                        const counter = setInterval(() => {
+                            if (currentCount >= countTo) {
+                                target.innerText = currentCount--;
+                            } else {
+                                clearInterval(counter);
+                            }
+                        }, 100); // Adjust speed here
+                    } else {
+                        // For registrationsPerDayCounter and earningsIncreaseCounter, count up
+                        let currentCount = countTo - 5;
+                        const counter = setInterval(() => {
+                            if (currentCount <= countTo) {
+                                target.innerText = currentCount++;
+                            } else {
+                                clearInterval(counter);
+                            }
+                        }, 100); // Adjust speed here
+                    }
+                }
             });
-        }
+        }, options);
+        // Observe each statistic card
+        document.querySelectorAll(".statistics_cards_parent").forEach((card) => {
+            observer.observe(card);
+        });
     </script>
     <!--======================botstrap-link=========================-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
