--- a/index2.html
+++ b/index2.html
@@ -117,7 +117,7 @@
                         class="max-w-328 max-w-654 w-100 px-lg-1 px-xl-0 position-relative mt_0 mt-md-40 mt-sm-32 mt_24   z-1 ">
                         <div class=" position-relative z-1 w-fit-content">
                             <div class="bg-white card-from-red-header">
-                                <h3 class=" mt_2 ff_opensans fw-bold fs_xs off-black3 lh-xs">This Is The Right Time to
+                                <h3 class=" pt_2 ff_opensans fw-bold fs_xs off-black3 lh-xs">This Is The Right Time to
                                     Invest In
                                     AI Stocks</h3>
                                 <p class=" ff_opensans fw-normal mb-0 fs_axs gray-4e lh-axs">
@@ -151,11 +151,11 @@
                                         class=" w-100 mt-6 numberinput-header  header-red-input-modification ff_opensans fw-semibold fs_xs lh-xm clr-black">
                                     <button id="submitheadermobile" disabled style="cursor: not-allowed;"
                                         aria-label="spotleft" href="#"
-                                        class=" submitheader_from_mobile text-decoration-none  w-100 mt-4 ff_opensans text-white fw-bold fs_axs lh-xm spot-left">Get
+                                        class=" submitheader_from_mobile text-decoration-none  text-white w-100 mt-4 ff_opensans text-white fw-bold fs_axs lh-xbm spot-left">Get
                                         Started</button>
                                 </form>
                             </div>
-                            <img src="./assets/images/webp/mobileheader.webp" alt="mobile-header"
+                            <img src="./assets/images/webp/mobileheader.webp" height="644" alt="mobile-header"
                                 class=" max-w-328 img-padding-from max-h-644">
                         </div>
                     </div>
