--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,7 @@
     <title>Ai-stocks</title>
 </head>
 
-<body class="">
+<body class="body_bg_img2 overflow-x-hidden">
     <!-- header -->
     <header class=" bg-hero-img-2 mw_1920 position-relative overflow-x-clip  z-1">
         <nav class="backdrop-20 py-12 nav-background position-relative  z-1">
@@ -408,7 +407,7 @@
         </div>
     </section>
     <!--=====================track-section====================-->
-    <section class="pt-lg-5 pt-md-4 mt-5">
+    <section class="pt-5 ">
         <div class="custom_container container px-4 travel_section_padding pt-xl-5 mt-lg-5">
             <div
                 class="row align-items-center justify-content-md-between justify-content-center flex-wrap-reverse ai_blue">
