--- a/index.html
+++ b/index.html
@@ -602,9 +602,7 @@
                 <div class="gradient-leftline"></div>
                 <div class="gradient-rightline"></div>
             </div>
-            <div class="container bg-black">
-
-
+            <div class="container">
                 <div class="row align-items-center pt-2 flex-lg-row flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
                         <h2 class="white text-lg-start text-center fw-normal mb-0 fs_6lg">Nvidia - AI GPU </br><span
